--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,12 +4,16 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-inkwell = { version = "0.5.0", features = ["llvm17-0"] }
+inkwell = { version = "0.5.0", features = ["llvm18-0"] }
 lalrpop-util = { version = "0.22.0", features = ["lexer", "unicode"] }
 thiserror = "2.0.2"
-llvm-sys-170 = { package = "llvm-sys", version = "170.2.0", features = [
+llvm-sys-180 = { package = "llvm-sys", version = "180.0.0", features = [
   "prefer-static",
 ] }
 
 [build-dependencies]
 lalrpop = "0.22.0"
+
+[profile.release]
+strip = "symbols"
+lto = true
