--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "wngc"
-version = "0.1.0"
+version = "0.1.1"
 edition = "2021"
 
 [dependencies]
@@ -10,6 +10,7 @@ thiserror = "2.0.2"
 llvm-sys-180 = { package = "llvm-sys", version = "180.0.0", features = [
   "prefer-static",
 ] }
+clap = { version = "4.5.21", features = ["derive"] }
 
 [build-dependencies]
 lalrpop = "0.22.0"
